style.css
/* Basic Things to Do First */
@import url("https://use.typekit.net/ovt6ynt.css");
@import url("https://fonts.googleapis.com/css2?family=EB+Garamond:ital,wght@0,400;0,500;0,600;0,700;0,800;1,400;1,500;1,600;1,700;1,800&family=Oswald:wght@200;300;400;500;600;700&family=Roboto+Condensed:wght@300;400;700&family=Roboto:wght@100;300;400;500;700;900&family=Source+Sans+Pro:ital,wght@0,200;0,300;0,400;0,600;0,700;0,900;1,200;1,300;1,400;1,600;1,700;1,900&family=Spectral:wght@200;300;400;500;600;700;800&display=swap");

body {
    height: 100%;
	font-family: "Roboto", sans-serif;
	background: linear-gradient(#201F2F, #141e30);
	color: white;
}

body li a {
    color: white;
    transition: color 0.3s;
}

a {
    text-decoration: none;
}

a:hover {
    color: #0056b3;
}

p a {
    text-decoration: none;
    color: black;
}

p a:hover {
    color: #0056b3;
}

header {
    background-color: black;
    color: white;
    padding: 20px;
    display: flex;
    align-items: center;
    justify-content: space-between;
    position: sticky;
    top: 0;
    z-index: 100;
}

.username {
    margin: 0 auto;
    font-weight: bold;
    font-size: 24px;
    position: absolute;
    left: 50%;
    transform: translateX(-50%);
}

.spiderWebFlat {
    position: absolute;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
    width: 50px; /* adjust as needed */
    height: 50px; /* adjust as needed */
    padding-right: 180px; /* adjust as needed */
}

/* Navigation Menu Decoration */

nav {
    display: flex;
    justify-content: space-between;
    position: absolute;
}

/* Remove bullet points from the list */
nav ul {
    list-style: none;
    padding: 0;
    margin: 0;
}

/* Display list items horizontally */
nav ul li {
    display: inline;
    margin-right: 20px; /* Adjust the spacing between links if needed */
}

/* Style the links */
nav ul li a {
    text-decoration: none;
    color: white; /* Link color */
    font-weight: bold; /* Optional: Make the text bold */
}

/* Change link color on hover */
nav ul li a:hover {
    color: #0056b3; /* New color on hover */
    transition: color 0.3s;
}

.social-links {
    justify-content: space-between;
    display: inline-flex;
}

.social-links ul {
    list-style: none;
    padding: 4px 0 0 0;
    text-decoration: none;
    margin: 0 0 0 4px;
}

footer {
    text-align: center;
    margin-top: 40px;
}

/* about-me.html */
.svg-container {
    background-color: #ef476f;
    width: 100%;
    height: 300px;
    display: flex;
    justify-content: center;
    align-items: center;
}

.svg-container h1 {
    text-align: center;
}

.hi-hand {
    animation: hi 1.5s linear -0.5s infinite;
    display: inline-block;
    transform-origin: 70% 70%;
}

@keyframes hi {
    0% { transform: rotate( 0.0deg) }
   10% { transform: rotate(14.0deg) }
   20% { transform: rotate(-8.0deg) }
   30% { transform: rotate(14.0deg) }
   40% { transform: rotate(-4.0deg) }
   50% { transform: rotate(10.0deg) }
   60% { transform: rotate( 0.0deg) }
  100% { transform: rotate( 0.0deg) }
}

@keyframes gradient {
  0% {
    background-position: 0% 50%;
  }
  50% {
    background-position: 100% 50%;
  }
  100% {
    background-position: 0% 50%;
  }
}

.svg-container {
  background-size: 200% 200%;
  background-image: linear-gradient(
    45deg,
    #ef476f,
    #ffd166,
    #06d6a0,
    #118ab2,
    #ef476f
  );

  animation: gradient 5s ease infinite;
}

/* contributions.html */

.contributeText {
    text-align: center;
}

.contributions {
    align-items: center;
    text-align: center;
    width: 100%; /* Full-width table */
    border-collapse: collapse; /* Collapse borders */
}

.contributions th {
    background-color: black; /* Light grey background */
    color: white; /* Black text color */
    padding: 15px; /* Padding */
    border: 1px solid white;
}

.contributions td {
    border: 1px solid #ddd; /* Add a border */
    padding: 8px; /* Padding */
}

.contributions td a {
    text-decoration: none;
    color: orange;
}

.contributions td a:hover {
    color: #0056b3;
}

.contributions tr:hover {
    background-color: black; /* Add a hover effect to rows */
}

/* index.html */

.frontBanner {
    background-image: url('media/abstract-art.jpg');
    background-size: cover; /* cover image */
    background-repeat: no-repeat; /* to prevent repeating the image */
    padding-top: 150px;
    text-align: center;
}

.frontBanner h1 {
    background-color: red;
    text-transform: uppercase;
    font-weight: semibold;
    font-family: "Source Sans Pro", sans-serif;
    padding: 20px 60px; /* adjust as needed */
    margin: 10px 0 200px 0;
    display: inline-block;
}

.underBannerText {
    padding: 40px 35px 50px 30px;
    text-align: center;
    text-transform: uppercase;
}

.projects-container {
    display: flex;
    flex-direction: column;
}

.projects-items {
    display: flex;
    margin: 15px 20px 0 30px; /* adjust as needed */
}

.text-container {
    display: flex-start;
    flex-direction: column;
    margin-left: 25px;
}

.text-container p {
    padding-top: 10px;
}

.tags, .first-tag {
    border: solid 1px;
    color: grey;
    display: inline;
    padding: 5.5px;
}

.tags {
    margin-left: 5px;
}

.projects-items-heading {
    color: orange;
    text-decoration: none;
}

.projects-items-heading:hover {
    color: #0056b3; /* New color on hover */
    transition: color 0.3s;
}

.projects-items-text {
    font-size: 24px;
}

.projects-items img {
    width: 300px; /* Adjust as needed */
    height: 300px; /* Adjust as needed */
    object-fit: cover; /* This will prevent distortion */
}

.details {
    font-size: 24px;
    border: solid 1px;
    padding-left: 8px;
}

.resume {
    text-decoration: none;
    color: orange;
}

.resume:hover {
    color: #0056b3;
}

/* Decorations for Mobile Version */

@media only screen and (max-width: 800px) and (prefers-color-scheme: dark) {
    /* Styles for typical tablets and mobiles screens */

    .username {
        text-align: center;
        z-index: 1003;
        display: flex;
        padding-left: 40px;
    }

    .spiderWebFlat {
        position: absolute;
        right: 0;
        left: 90%;
        padding-right: 0;
        z-index: 1004;
    }

    /* CSS for burger menu */
    .burger-menu {
        display: flex;
        flex-direction: column;
        cursor: pointer;
        padding: 10px;
        position: relative;
        z-index: 1002;
    }

    .line {
        width: 40px;
        height: 3px;
        background-color: white;
        margin: 4px 0;
        transition: .3s cubic-bezier(.8, .5, .2, 1.4);
        transform-origin: center;
    }

    /* Initial state of the lines */
    .burger-menu .line:nth-child(1) {
        top:0px;
    }

    .burger-menu .line:nth-child(2) {
        top:13px;
        opacity:1;
    }

    .burger-menu .line:nth-child(3) {
        bottom:0px;
    }

    /* State of the lines when the menu is open */
    .burger-menu.open .line:nth-child(1) {
        transform: translateY(11px) rotate(45deg);
    }

    .burger-menu.open .line:nth-child(2) {
        opacity: 0;
    }

    .burger-menu.open .line:nth-child(3) {
        transform: translateY(-11px) rotate(-45deg);
    }

    /* CSS for mobile menu */
    .nav-menu {
        display: none; /* Hide the mobile menu by default */
        background-color: black;
        position: absolute;
        top: 0;
        left: 0;
        width: 50%; /* Adjust the width of the menu as needed */
        height: 100vh;
        padding-top: 70px; /* Adjust the padding to avoid overlapping with the header */
        padding-left: 20px;
        z-index: 1000; /* Increase if necessary */

    }

    .nav-menu ul {
        display: flex;
        list-style: none;
        flex-direction: column;
        padding: 0;
        margin-top: 40px;
    }

    .nav-menu ul li {
        margin-bottom: 20px;
        flex-direction: column;
        display: block;
        text-align: center;
    }

    .nav-menu a {
        display: block;
        padding: 10px; /* Adjust as needed */
        background-color: brown; /* Green background */
        color: white; /* White text */
        border: none; /* No border */
        cursor: pointer; /* Cursor style */
    }

    .social-links {
        display: none; /* Hide the social links by default */
        position: absolute;
        top: 70vh; /* Adjust if necessary */
        left: 0;
        height: 50vh;
        width: 80%; /* Adjust the width of the menu as needed */
        padding-left: 20px;
        z-index: 1001; /* Increase if necessary */
        margin-top: 20px;
    }

    .social-links ul {
        display: flex;
        list-style: none;
        padding: 0;
        margin: 0;
        flex-direction: column;
    }

    .projects-items {
        flex-direction: column;
        text-align: center;
        margin-bottom: 20px;
        align-items: center;
        margin: unset;
    }

    .projects-items-text {
        font-size: 18px;
        margin-bottom: 40px;
    }

    .projects-items img {
        max-width: 100%;
        height: unset; /* Maintain the aspect ratio of the image */
        margin-bottom: 10px; /* Add some space between the image and the text */
    }

    .text-container {
        width: 80%;
        margin-left: 0;
    }

    .tags, first-tag {
        display: inline-flex;
        margin-bottom: 8px;
    }

    .show {
        display: block !important;
    }
}

